tests/spec/emit/snapshots/pointer_receiver_method_on_an_indexed_element_keeps_the_pin.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Counter { n: int }
  
  impl Counter {
    fn add(self: mut Ref<Counter>, k: int) {
      self.n += k
    }
  }
  
  fn main() {
    let mut cs = [Counter { n: 1 }, Counter { n: 2 }]
    let mut i = 0
    let bump = || -> int { i = 1; 1 }
    cs[i].add(bump())
    let _ = cs
  }
---
package main

type Counter struct {
	n int
}

func (c *Counter) add(k int) {
	c.n += k
}

func main() {
	cs := []Counter{{n: 1}, {n: 2}}
	i := 0
	bump := func() int {
		i = 1
		return 1
	}
	callee := cs[i].add
	callee(bump())
	_ = cs
}
