tests/spec/emit/snapshots/pointer_receiver_method_with_call_arguments_is_not_pinned.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Counter { n: int }
  
  impl Counter {
    fn add(self: mut Ref<Counter>, k: int) {
      self.n += k
    }
  }
  
  fn main() {
    let mut c = Counter { n: 1 }
    let bump = || -> int { c.n += 10; 1 }
    c.add(bump())
    let _ = c
  }
---
package main

type Counter struct {
	n int
}

func (c *Counter) add(k int) {
	c.n += k
}

func main() {
	c := Counter{n: 1}
	bump := func() int {
		c.n += 10
		return 1
	}
	c.add(bump())
	_ = c
}
