tests/spec/emit/snapshots/predicate_value_stays_inline_when_a_later_sibling_binds_err.snap
---
source: tests/spec/emit/result_option_patterns.rs
description: |
  
  fn first() -> Result<int, error> { Ok(1) }
  fn second() -> Result<int, error> { Ok(2) }
  fn pick(flag: bool, n: int) -> int { if flag { n } else { 0 } }
  
  fn run() -> Result<int, error> {
    Ok(pick(first().is_ok(), second()?))
  }
---
package main

func first() (int, error) {
	return 1, nil
}

func second() (int, error) {
	return 2, nil
}

func pick(flag bool, n int) int {
	if flag {
		return n
	}
	return 0
}

func run() (int, error) {
	_, err := first()
	ret, err_1 := second()
	if err_1 != nil {
		return 0, err_1
	}
	return pick(err == nil, ret), nil
}
