tests/spec/emit/snapshots/prelude_dispatch_with_captured_prelude_constructor.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn main() {
    let g = Some
    let opt: Option<int> = Some(1)
    let r = opt.and_then(g)
    let _ = r
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	cb := lisette.MakeOptionSome[int]
	g := func(arg0 int) (int, bool) {
		opt_1 := cb(arg0)
		if opt_1.Tag == lisette.OptionSome {
			return opt_1.SomeVal, true
		}
		return 0, false
	}
	opt := lisette.MakeOptionSome(1)
	cb_1 := g
	tagged := func(arg0 int) lisette.Option[int] {
		return lisette.OptionFromCommaOk[int](cb_1(arg0))
	}
	r := lisette.OptionAndThen(opt, tagged)
	_ = r
}
