tests/spec/emit/snapshots/prelude_dispatch_with_prelude_constructor_arg.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn main() {
    let opt: Option<int> = Some(1)
    let r = opt.and_then(Some)
    let _ = r
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	opt := lisette.MakeOptionSome(1)
	r := lisette.OptionAndThen(opt, lisette.MakeOptionSome[int])
	_ = r
}
