tests/spec/emit/snapshots/prelude_dispatch_with_user_fn_arg.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn doubler(x: int) -> Option<int> { Some(x * 2) }
  fn main() {
    let opt: Option<int> = Some(1)
    let r = opt.and_then(doubler)
    let _ = r
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func doubler(x int) (int, bool) {
	return x * 2, true
}

func main() {
	opt := lisette.MakeOptionSome(1)
	cb := doubler
	tagged := func(arg0 int) lisette.Option[int] {
		return lisette.OptionFromCommaOk[int](cb(arg0))
	}
	r := lisette.OptionAndThen(opt, tagged)
	_ = r
}
