tests/spec/emit/snapshots/prelude_method_value_capture_with_option_returning_callback.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn main() {
    let f = Option.and_then
    let x = f(Some(1), |v| Some(v * 2))
    let _ = x
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	cb := lisette.OptionAndThen[int, int]
	f := func(arg0 lisette.Option[int], arg1 func(int) (int, bool)) (int, bool) {
		tagged := func(arg0 int) lisette.Option[int] {
			return lisette.OptionFromCommaOk[int](arg1(arg0))
		}
		opt := cb(arg0, tagged)
		if opt.Tag == lisette.OptionSome {
			return opt.SomeVal, true
		}
		return 0, false
	}
	x := lisette.OptionFromCommaOk[int](f(lisette.MakeOptionSome(1), func(v int) (int, bool) {
		return v * 2, true
	}))
	_ = x
}
