tests/spec/emit/snapshots/prelude_method_value_type_instantiation.snap
---
source: tests/spec/emit/prelude.rs
description: |
  
  fn main() {
    let f = Option.map
    let x = f(Some(1), |v| v + 1)
    let _ = x
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func main() {
	cb := lisette.OptionMap[int, int]
	f := func(arg0 lisette.Option[int], arg1 func(int) int) (int, bool) {
		opt := cb(arg0, arg1)
		if opt.Tag == lisette.OptionSome {
			return opt.SomeVal, true
		}
		return 0, false
	}
	x := lisette.OptionFromCommaOk[int](f(lisette.MakeOptionSome(1), func(v int) int {
		return v + 1
	}))
	_ = x
}
